test/data/semantic-errors/type-mismatches-in-assigment.iki
var y: int;
y = false;
